[package]
name = "hoposhell-client"
version = "0.3.6"
edition = "2021"

[[bin]]
name = "hopo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
portable-pty = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
expect-exit = "0.5.2"
regex = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
shellexpand = "3.1.0"
glob = "0.3.1"
zstd = "0.12.3"